force-app/main/default/objects/Email_To_Object_Setting__mdt/Email_To_Object_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Email To Object Setting to help expand on when we want to allow/ignore emails to Projects</description>
    <label>Email To Object Setting</label>
    <pluralLabel>Email To Object Settings</pluralLabel>
</CustomObject>