force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this an active setting?</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>