force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Alt_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Alt_Search_Field__c</fullName>
    <inlineHelpText>Alternate search field to check in addition to primary search field</inlineHelpText>
    <label>Alt. Search Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>