force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <inlineHelpText>API Name of the object that will be used for this configuration</inlineHelpText>
    <label>Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>