force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Project_Object__c.field-meta.xml
<CustomField>
    <fullName>Project_Object__c</fullName>
    <inlineHelpText>API Name of the project object</inlineHelpText>
    <label>Project Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>