force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Project_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Field__c</fullName>
    <description>Status Field that will referenced for statuses found in Project Statuses list</description>
    <inlineHelpText>API Name of the field on the object Listed in Project Object&quot;</inlineHelpText>
    <label>Project Status Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>