force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <inlineHelpText>Email Field to locate the project Id. i.e. Subject ( not case sensitive )</inlineHelpText>
    <label>Search Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>