force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Site_Object__c.field-meta.xml
<CustomField>
    <fullName>Site_Object__c</fullName>
    <inlineHelpText>API Name of the site object</inlineHelpText>
    <label>Site Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>