force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Site_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Site_Status_Field__c</fullName>
    <inlineHelpText>API Name of the field that is on the object defined in &quot;Site Object&quot; that will be used to compare the Site status</inlineHelpText>
    <label>Site Status Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>