force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Statuses_to_Ignore__c.field-meta.xml
<CustomField>
    <fullName>Statuses_to_Ignore__c</fullName>
    <inlineHelpText>Semicolon Separated List of statuses that are to be ignored when a project is checked in Email Service
i.e Complete;Cancelled;Pending</inlineHelpText>
    <label>Statuses to Ignore</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>