force-app/main/default/objects/Email_To_Object_Setting__mdt/fields/Use_Site_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Use_Site_Status_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to use the Site status instead of the Project status field</inlineHelpText>
    <label>Use Site Status Field?</label>
    <type>Checkbox</type>
</CustomField>