force-app/main/default/objects/Email_To_Object_Setting__mdt/validationRules/Require_status_to_ignore.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_status_to_ignore</fullName>
    <active>true</active>
    <description>Require a value in statuses to ignore</description>
    <errorConditionFormula>ISBLANK(  Statuses_to_Ignore__c )</errorConditionFormula>
    <errorDisplayField>Statuses_to_Ignore__c</errorDisplayField>
    <errorMessage>You must supply at least 1 status</errorMessage>
</ValidationRule>